Fix: Fixed scrolling on mobile

--- a/style/scss/_stories.scss
+++ b/style/scss/_stories.scss
@@ -102,7 +102,10 @@
   }
 }
 
-@media (max-width: $laptop-size) {
+@media (max-width: $tablet-size) {
+  .swiper-sline {
+    width: 50vw;
+  }
   .stories {
     padding-bottom: 10rem;
     &-text {
@@ -119,16 +122,18 @@
       align-items: center;
       justify-content: center;
       margin-top: -9rem;
+      margin-left: -50rem;
+      height: auto;
     }
 
     &-right {
       z-index: 100;
+      width: 100%;
     }
 
     &-right img {
       margin-bottom: -17rem;
       object-fit: cover;
-      width: 100%;
       transform: scale(0.5);
       border-radius: 30rem;
     }
@@ -140,6 +145,7 @@
       padding: 6rem 4rem;
       width: auto;
       max-width: 51.7rem;
+      width: 90vw;
 
       .stories-extra {
         font-size: 2.4rem;
@@ -169,11 +175,6 @@
 
 // (A) Media queries for smaller screens
 @media only screen and (max-width: 426px) {
-  .stories {
-    &-left {
-      height: 460px; // (A) Expands height to display the whole element
-    }
-  }
   .swiper.swiper-cards {
     display: flex;
     flex-direction: column;
